# LBMtest

./: CMakeLists.txt  geometry.hpp  kokkos_defs.hpp  ldc3dt.cpp  ldc3dt.hpp  main.cpp  settings.hpp
